# mlops_pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
notebook/: ml_pipeline.ipynb
src/model/: ml_pipeline.py
src/utils/: decorators.py  logging_config.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/bigquery/: main.tf  variables.tf
terraform/modules/gcs_bucket/: main.tf  outputs.tf  variables.tf
terraform/modules/vertex_ai_endpoint/: main.tf  outputs.tf  variables.tf
tests/: test_model.py
