[tool.poetry]
name = "ml-pipeline"
version = "0.1.0"
description = "A simple machine learning pipeline using the Facade Pattern."
authors = ["Piyush Mittal <m@piyushmittal.com>"]
readme = "README.md"


packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
ipykernel = "6.29.5"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
flake8 = "7.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501", "E712"]

[tool.black]
line-length = 88
preview = true
target-version = ["py310"]